kubernetes/apps/tools/mcp-platform/mcp-servers/toolhive-doc-mcp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toolhive-doc-mcp
  namespace: mcp-platform
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: toolhive-doc-mcp-basic-auth
    nginx.ingress.kubernetes.io/auth-secret-type: auth-file
    nginx.ingress.kubernetes.io/auth-realm: toolhive-doc-mcp
spec:
  ingressClassName: internal
  rules:
    - host: &host "toolhive-doc-mcp.int.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcp-toolhive-doc-mcp-remote-proxy
                port:
                  name: http
  tls:
    - hosts:
        - *host
